[package]
name = "arrow-digest"
version = "56.0.0"
edition = "2021"
repository = "https://github.com/sergiimk/arrow-digest"
description = "Stable hashes for Apache Arrow."
keywords = ["arrow", "hash", "digest"]
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
license = "Apache-2.0"


[dependencies]
digest = "0.10"
arrow = { version = "56", default-features = false }


[dev-dependencies]
criterion = "0.7"
rand = { version = "0.9", features = ["small_rng"] }
blake2 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tempfile = "3"
tokio = { version = "1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
parquet = { version = "56", default-features = false, features = ["arrow"] }


[[bench]]
name = "perf"
harness = false
